--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: "About"
-description: "过程是风景 结果是明信片"
+description: "在意的是沿途的风景"
 header-img: "img/about-bg-walle.jpg"
 multilingual: true
 ---
